--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "react-slidez",
-  "version": "0.0.20",
+  "version": "0.0.30",
   "description": "React Slideshow Component",
   "main": "build/index.js",
-  "keywords": ["react", "slideshow"],
+  "keywords": [
+    "react",
+    "slideshow"
+  ],
   "peerDependencies": {
-    "react": "^15.5.4"
+    "react": "^16.4.1"
   },
   "dependencies": {
-    "react": "^15.5.4",
-    "webpack": "^2.6.1"
+    "react": "^16.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
-    "build": "webpack"
+    "start": "parcel serve ./src/index.js -p 3001",
+    "build": "parcel build ./src/index.js --public-url ./ --out-dir ./build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
     "name": "Paul Fitzgerald"
@@ -22,7 +24,6 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
